--- a/stylesheets.css
+++ b/stylesheets.css
@@ -1,2 +1,15 @@
-body {background-color: #a7ff75;}
-h1 {font-family: arial,sans-serif; color: #133102;}
+body {
+  background-color: #b7ff85;
+}
+
+h1 {
+  font-family: arial,sans-serif;
+  color: #428a00;
+  }
+
+.CopyText {
+  height: 60px;
+  width: 40%;
+  background-color: #f8fff8;
+  border: 2px solid #c8cfc8;
+  }
