--- a/stylesheets.css
+++ b/stylesheets.css
@@ -1,12 +1,21 @@
 body {
   margin: 20px;
   background-color: #afffaf;
+  font-family: arial, sans-serif;
 }
 
 h1 {
   font-size: 3em;
-  font-family: arial, sans-serif;
   color: #051905;
+}
+
+button {
+  height: 40px;
+  background-color: #88ea88;
+  color: #051905;
+  border: 3px solid #65c765;
+  border-radius: 5px;
+  padding: 7px 10px;
 }
 
 .ScratchLink:link, .ScratchLink:visited {
@@ -26,6 +35,7 @@ h1 {
   border: 5px solid rgb(240, 245, 240);
   border-radius: 10px;
   padding: 5px 10px;
+  resize: none;
 }
 
 .container {
